margin fix for bullet points on small screens

--- a/_scss/_media.scss
+++ b/_scss/_media.scss
@@ -25,4 +25,9 @@
       }
     }
   }
+  article {
+    li {
+      margin-left: 20px;
+    }
+  }
 }
